--- a/src/main/resources/assets/alcd/lang/en_us.json
+++ b/src/main/resources/assets/alcd/lang/en_us.json
@@ -1,3 +1,12 @@
 {
-  "item.alcd.volatile_petal": "Volatile Petal"
+  "item.alcd.volatile_petal": "Volatile Petal",
+
+  "item.minecraft.potion.effect.freeze_potion": "Freeze Potion",
+  "item.minecraft.splash_potion.effect.freeze_potion": "Splash Potion of Freeze",
+  "item.minecraft.lingering_potion.effect.freeze_potion": "Lingering Potion of Freeze",
+
+
+  "itemGroup.alcdtab": "Alchemist's Dream",
+
+  "effect.alcd.freeze": "Freeze"
 }
