Parchment Mappings Update

--- a/src/main/resources/assets/alcd/lang/en_us.json
+++ b/src/main/resources/assets/alcd/lang/en_us.json
@@ -8,5 +8,7 @@
 
   "itemGroup.alcdtab": "Alchemist's Dream",
 
-  "effect.alcd.freeze": "Freeze"
+  "effect.alcd.freeze": "Freeze",
+  "effect.alcd.volatile": "Volatile"
+
 }
