--- a/src/main/resources/assets/alcd/lang/en_us.json
+++ b/src/main/resources/assets/alcd/lang/en_us.json
@@ -10,7 +10,7 @@
   "item.minecraft.splash_potion.effect.volatile_potion": "Splash Potion of Volatility",
   "item.minecraft.lingering_potion.effect.volatile_potion": "Lingering Potion of Volatility",
 
-  "item.minecraft.potion.effect.blissful_frost_potion": "Volatile Blissful Frost",
+  "item.minecraft.potion.effect.blissful_frost_potion": "Blissful Frost Potion",
   "item.minecraft.splash_potion.effect.blissful_frost_potion": "Splash Potion of Blissful Frost",
   "item.minecraft.lingering_potion.effect.blissful_frost_potion": "Lingering Potion of Blissful Frost",
 
