--- a/src/main/resources/assets/alcd/lang/en_us.json
+++ b/src/main/resources/assets/alcd/lang/en_us.json
@@ -16,6 +16,8 @@
 
   "item.alcd.raccoon_spawn_egg": "Raccoon Spawn Egg",
 
+  "block.alcd.alchemy_table_block": "Alchemy Table",
+
   "itemGroup.alcdtab": "Alchemist's Dream",
 
   "effect.alcd.freeze": "Freeze",
